--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,44 @@
 services:
   # 1. СЕРВИС BROKER (REDIS)
   broker:
-    image: redis:7-alpine # образ Redis
+    image: redis:7-alpine 
     container_name: ml_lab_redis
     ports:
-      - "6379:6379" # открываем порт для удобства
+      - "6379:6379" 
     command: redis-server --appendonly yes
     volumes:
-      - redis_data:/data # сохраняем данные Redis
+      - redis_data:/data 
+  
   # 2. СЕРВИС DB (POSTGRES)
-  # db:
-  #   image: postgres:15-alpine
-  #   container_name: ml_lab_db
-  #   environment:
-  #     POSTGRES_USER: ${DB_USER}       # берется из .env файла
-  #     POSTGRES_PASSWORD: ${DB_PASS}
-  #     POSTGRES_DB: ${DB_NAME}
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #   ports:
-  #     - "5433:5432"
+  db:
+    image: postgres:15-alpine
+    container_name: ml_lab_db
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - ./init:/docker-entrypoint-initdb.d 
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5433:5432" # 5433 на хосте, 5432 внутри контейнера
+  
+  # PD admin    
+  pgadmin:
+    image: dpage/pgadmin4:7
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@ml-lab.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
 
   # 3. СЕРВИС API (FASTAPI)
   api:
     build: 
-      context: . # ищем Dockerfile в корне
+      context: . 
       dockerfile: Dockerfile
     container_name: ml_lab_api
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
@@ -33,10 +47,9 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      # - db
-      - broker # API должен запуститься после DB и Redis
+      - db
+      - broker 
     environment:
-      # Передаем адрес Redis и DB в API
       REDIS_URL: redis://broker:6379/0 
       DATABASE_URL: postgresql://${DB_USER}:${DB_PASS}@db:5432/${DB_NAME}
       
@@ -46,14 +59,13 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: ml_lab_worker
-    # команда запускает Celery с 4 процессами
     command: celery -A app.worker.celery_app worker -l info -c 4 
     volumes:
       - .:/app
     depends_on:
-      - broker # Worker зависит только от Redis
+      - db 
+      - broker 
     environment:
-      # orker тоже должен знать, где Redis
       REDIS_URL: redis://broker:6379/0 
       DATABASE_URL: postgresql://${DB_USER}:${DB_PASS}@db:5432/${DB_NAME}
 
